# apropos

./: .gitignore  CHANGELOG.md  Makefile  README.md  ROADMAP.md  apropos-tx.cabal  apropos.cabal  bench.html  cabal-haskell.nix.project  cabal.project  flake.nix  hie.yaml
.github/: format.sh
.github/workflows/: integrate.yaml
bench/: Main.hs
examples/: Main.hs
examples/Spec/: Inc.hs  Int.hs  IntCompact.hs  IntEither.hs  IntOverlay.hs  IntPair.hs  IntPairOverlay.hs  IntPairity.hs  IntPermutationGen.hs  IntPermutingGen.hs  IntSimple.hs  PairityPair.hs  Rational.hs  RationalParam.hs  RationalSimple.hs  Rationals.hs  TicTacToe.hs
examples/Spec/Description/: IntCompact.hs  IntPermutationGen.hs  IntSimple.hs
examples/Spec/Plutarch/: CostModel.hs  MagicNumber.hs
examples/Spec/TicTacToe/: Board.hs  Location.hs  LocationSequence.hs  Move.hs  MoveSequence.hs  Player.hs  PlayerLocationSequencePair.hs  PlayerSequence.hs  Tile.hs
src/: Apropos.hs  AproposRoot.hs  Test.hs
src/Apropos/: Description.hs  Error.hs  Formula.hs  Gen.hs  Generator.hs  HasAbstractions.hs  HasLogicalModel.hs  HasParameterisedGenerator.hs  HasPermutationGenerator.hs  Logic.hs  LogicalModel.hs  Overlay.hs  Pure.hs  Runner.hs  Script.hs  SetFunctionFormula.hs  Tx.hs  Type.hs
src/Apropos/HasAbstractions/: Abstraction.hs
src/Apropos/HasPermutationGenerator/: Abstraction.hs  Contract.hs  Morphism.hs  PermutationEdge.hs  Source.hs
src/Apropos/LogicalModel/: Enumerable.hs  Formula.hs  HasLogicalModel.hs
src/Apropos/LogicalModel/Enumerable/: TH.hs
src/Brutus/: Gen.hs  HasLogicalModel.hs  HasParameterisedGenerator.hs  HasPermutationGenerator.hs  LogicalModel.hs
src/Brutus/HasPermutationGenerator/: Contract.hs  PermutationEdge.hs
src/Brutus/LogicalModel/: Enumerable.hs  Formula.hs
src/Brutus/LogicalModel/Enumerable/: TH.hs
src/Brutus/Plutus/: HasScriptRunner.hs  HasTxRunner.hs
src/Brutus/Pure/: HasRunner.hs
src/Proper/: HasLogicalModel.hs  HasParameterisedGenerator.hs  HasPermutationGenerator.hs  HasPlutusTestRunner.hs  HasProperties.hs  HasPureTestRunner.hs  IsDeviceModel.hs  IsPlutusModel.hs  IsPureModel.hs  LogicalModel.hs  Minimal.hs  PermutingGenerator.hs  Plutus.hs  Proposition.hs  Script.hs
src/Proper/Data/: Int.hs  Tuple.hs
src/Proper/HasPermutationGenerator/: Contract.hs  Gen.hs  PermutationEdge.hs
src/Proper/LogicalModel/: Enumerable.hs  Formula.hs
src/Proper/LogicalModel/Enumerable/: TH.hs
src/Proper/Plutus/: Runner.hs
