cabal-version:      3.0
name:               apropos-tx
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:      base ^>=4.14
                    , containers
                    , hedgehog
                    , minisat-solver
                    , mtl
                    , plutarch
                    , plutus-core
                    , plutus-ledger-api
                    , pretty
                    , pretty-show
                    , safe
                    , template-haskell
                    , text
                    , transformers
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies
    -ddump-splices

library
  import:          lang
  exposed-modules: Proper.LogicalModel
                 , Proper.LogicalModel.Formula
                 , Proper.LogicalModel.Enumerable
                 , Proper.LogicalModel.Enumerable.TH
                 , Proper.HasLogicalModel
                 , Proper.HasParameterisedGenerator
                 , Proper.HasPermutationGenerator
                 , Proper.HasPermutationGenerator.Contract
                 , Proper.HasPermutationGenerator.PermutationEdge
                 , Proper.HasPermutationGenerator.Gen
                 , Proper.HasPureTestRunner
                 , Proper.HasPlutusTestRunner
  hs-source-dirs:  src

test-suite examples
  import: lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: examples
  other-modules:
    Spec.Int
    Spec.IntPermutationGen
    Spec.IntPair
    Spec.TicTacToe
    Spec.TicTacToe.Player
    Spec.TicTacToe.Tile
    Spec.TicTacToe.Board
  build-depends:
    base,
    apropos-tx,
    plutarch,
    tasty,
    tasty-hedgehog,
    hedgehog,
    plutus-ledger-api,
    plutus-core,
    text,
    containers,
    mtl,



