cabal-version:      3.0
name:               apropos-tx
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:      base ^>=4.14
                    , containers
                    , hedgehog
                    , free
                    , lens
                    , minisat-solver
                    , mtl
                    , plutarch
                    , plutus-core
                    , plutus-ledger-api
                    , pretty
                    , pretty-show
                    , safe
                    , template-haskell
                    , text
                    , transformers
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies
    -ddump-splices

library
  import:          lang
  exposed-modules: Apropos
                 , Apropos.Type
                 , Apropos.LogicalModel
                 , Apropos.LogicalModel.Formula
                 , Apropos.LogicalModel.Enumerable
                 , Apropos.LogicalModel.Enumerable.TH
                 , Apropos.HasLogicalModel
                 , Apropos.HasParameterisedGenerator
                 , Apropos.HasPermutationGenerator
                 , Apropos.HasPermutationGenerator.Abstraction
                 , Apropos.HasPermutationGenerator.Contract
                 , Apropos.HasPermutationGenerator.Morphism
                 , Apropos.Gen
                 , Apropos.Gen.Range
                 , Apropos.Gen.Cardinality
                 , Apropos.Pure
                 , Apropos.Script
                 , Apropos.Tx
  hs-source-dirs:  src

test-suite examples
  import: lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: examples
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Spec.Int
    Spec.IntPermutationGen
    Spec.IntPair
    Spec.TicTacToe.Player
    Spec.TicTacToe.PlayerSequence
    Spec.TicTacToe.Location
    Spec.TicTacToe.LocationSequence
    Spec.TicTacToe.PlayerLocationSequencePair
    Spec.TicTacToe.Move
    Spec.TicTacToe.MoveSequence
    Spec.Plutarch.MagicNumber
    Spec.Plutarch.CostModel
  build-depends:
    base,
    apropos-tx,
    plutarch,
    tasty,
    tasty-hedgehog,
    hedgehog,
    plutus-ledger-api,
    plutus-core,
    text,
    containers,
    mtl,
