cabal-version:      3.0
name:               apropos
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    Strict
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:
    , base              >=4.14
    , containers
    , exceptions
    , free
    , generics-sop
    , hedgehog
    , ilist
    , lens
    , lifted-base
    , list-t
    , minisat-solver
    , mtl
    , pretty
    , pretty-show
    , tagged
    , template-haskell
    , text
    , transformers

  -- added Hashable v => Hashable (Set v)


  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies -ddump-splices -fwrite-ide-info

library
  import:          lang
  exposed-modules:
    Apropos
    Apropos.Description
    Apropos.Formula
    Apropos.Generator
    Apropos.Logic
    Apropos.Pure

  hs-source-dirs:  src

test-suite examples
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: examples
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Spec.IntCompact
    Spec.IntSimple

  build-depends:
    , apropos
    , base
    , containers
    , hedgehog
    , mtl
    , tasty
    , tasty-hedgehog
    , text
