cabal-version:      3.0
name:               apropos
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    OverloadedRecordDot
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:
    , base              >=4.15
    , containers
    , exceptions
    , free
    , generics-sop
    , hedgehog
    , ilist
    , lens
    , minisat-solver
    , mtl
    , pretty
    , pretty-show
    , tagged
    , text
    , transformers

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies

library
  import:          lang
  exposed-modules:
    Apropos

  other-modules:
    Apropos.Description
    Apropos.Generator
    Apropos.Runner

  hs-source-dirs:  src

test-suite examples
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: examples
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Spec.IntCompact
    Spec.IntSimple

  build-depends:
    , apropos
    , base
    , containers
    , hedgehog
    , mtl
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , text
